--- a/dev/index.html
+++ b/dev/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-        div#app{
-            height: 100%;
-            overflow-y: scroll;
-
-        }
-    </style>
-    <title>祖玛乐园</title>
+    <title>Style Attributes CC</title>
   </head>
   <body>
     <div id="app"></div>
